<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context="com.example.kyu.arrianeiro.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/main_pic"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/title_of_quiz"
            android:fontFamily="casual"
            android:textAllCaps="true"
            android:textColor="@color/main"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/description_of_quiz"
            android:textColor="@color/plain"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            android:orientation="vertical">



            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:layout_marginBottom="12dp"
                android:stretchColumns="*"
                android:background="@color/background2"
                tools:layout_editor_absoluteX="8dp">
                <TextView
                    style="@style/Questions"
                    android:id="@+id/textView"
                    android:text="@string/first_question" />
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="3">

                    <CheckBox
                        style="@style/Checkboxes"
                        android:id="@+id/checkBox1"
                        android:text="@string/navigation_system_1" />

                    <CheckBox
                        style="@style/Checkboxes"
                        android:id="@+id/checkBox2"
                        android:text="@string/navigation_system_2" />

                    <CheckBox
                        style="@style/Checkboxes"
                        android:id="@+id/checkBox3"
                        android:text="@string/navigation_system_3" />

                </TableRow>
            </TableLayout>
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/TableLayout">
                <TextView
                    style="@style/Questions"
                    android:text="@string/second_question" />

                <TableRow
                    style="@style/TableRows"
                    android:layout_marginTop="12dp"
                    android:weightSum="1">

                    <TextView
                        style="@style/Answers"
                        android:id="@+id/textView11"
                        android:text="@string/date_1"/>

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"/>

                </TableRow>
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">

                    <TextView
                        style="@style/Answers"
                        android:id="@+id/textView12"
                        android:text="@string/date_2"

                        />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"/>

                </TableRow>
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">

                    <TextView
                        style="@style/Answers"
                        android:id="@+id/textView7"
                        android:text="@string/date_3" />

                    <Spinner
                        android:id="@+id/spinner3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"/>
                </TableRow>
            </TableLayout>
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/TableLayout">
                <TextView
                    style="@style/Questions"
                    android:text="@string/third_question" />


                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">


                    <TextView
                        style="@style/AnswersWithBgr"
                        android:text="@string/acronym_1" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/localUserTerminal"
                        tools:ignore="LabelFor"/>
                </TableRow>
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">


                    <TextView
                        style="@style/AnswersWithBgr"
                        android:text="@string/acronym_2" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/underwaterLocatorBeacon"
                        tools:ignore="LabelFor" />
                </TableRow>
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">


                    <TextView
                        style="@style/AnswersWithBgr"
                        android:text="@string/acronym_3" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/extremlyHighFrequency"
                        tools:ignore="LabelFor"/>
                </TableRow>
                <TableRow
                    style="@style/TableRows"
                    android:weightSum="1">


                    <TextView
                        style="@style/AnswersWithBgr"
                        android:text="@string/acronym_4" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/longRangeAidToNavigation"
                        tools:ignore="LabelFor"/>
                </TableRow>
            </TableLayout>
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/TableLayout">
                <TextView
                    style="@style/Questions"
                    android:text="@string/fourth_question" />


                    <RadioGroup
                        style="@style/TableRows"
                        android:id="@+id/btnGroup" >

                        <RadioButton
                            style="@style/Checkboxes"
                            android:id="@+id/radioButton"
                            android:text="@string/frequency_1"
                            android:textColor="@color/main"
                             />

                        <RadioButton
                            style="@style/Checkboxes"
                            android:id="@+id/radioButton2"
                            android:text="@string/frequency_2"
                            android:textColor="@color/main"
                             />

                        <RadioButton
                            style="@style/Checkboxes"
                            android:id="@+id/radioButton3"
                            android:text="@string/frequency_3"
                            android:textColor="@color/main"
                             />
                    </RadioGroup>

            </TableLayout>
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/TableLayout">
            <TextView
                style="@style/Questions"
                android:id="@+id/textView2"
                android:text="@string/question5" />

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog1" />

                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main"/>

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText4"
                        android:hint=""/>
                </TableRow>

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog2" />
                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText5"
                        android:hint=""/>
                </TableRow>

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog3" />
                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main"/>

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText6"
                        android:hint=""/>
                </TableRow>

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog4" />
                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText7"
                        android:hint=""/>
                </TableRow>

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog5" />
                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main" />

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText8"
                        android:hint="" />
                </TableRow>

                <TableRow
                    style="@style/TableRows">

                    <Spinner
                        style="@style/Spinners"
                        android:id="@+id/spinner_dialog6" />
                    <TextView
                        style="@style/Answers"
                        android:text="@string/duration"
                        android:textColor="@color/main"/>

                    <EditText
                        style="@style/Acronyms"
                        android:id="@+id/editText9"
                        android:hint=""/>
                </TableRow>
            </TableLayout>


                    <Button
                        style="@style/AnswersWithBgr"
                        android:id="@+id/button"
                        android:onClick="submit"
                        android:layout_marginBottom="12dp"
                        android:text="@string/submit" />

                    <TextView
                        style="@style/TableLayout"
                        android:id="@+id/Ans"
                        android:padding="12dp"
                        android:text="@string/final_statement"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>